kubernetes qa/tls/ingress-myapp.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: myapp
  namespace: testing
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  rules:
    - host: myapp.superhost
      http:
        paths:
          - backend:
              service:
                name: hello-service
                port:
                  number: 9000
            pathType: Prefix
            path: /
